// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`projects > create > test 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create and connect with psql > test 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
{"psql-cli-args":["postgres://localhost:5432/test_project"]}"
`;

exports[`projects > create and connect with psql and psql args > test 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
{"psql-cli-args":["postgres://localhost:5432/test_project","-c","SELECT 1"]}"
`;

exports[`projects > create project with setting the context > test 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with database and role > test 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > delete > test 1`] = `
"id: test
name: test
create_at: 2018-01-01T00:00:00.000Z
"
`;

exports[`projects > get > test 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    primary_branch_only: false
"
`;

exports[`projects > list > test 1`] = `
"projects:
  - id: 1
    name: Project_1
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
  - id: 2
    name: Project_2
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
  - id: 3
    name: Project_3
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
shared_with_me:
  - id: adj-noun-12401747
    region_id: aws-us-east-2
    name: Shared Project
    created_at: 2024-04-03T04:45:46Z
    updated_at: 2024-04-11T16:13:43Z
"
`;

exports[`projects > update ip allow > test 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 127.0.0.1
      - 192.168.1.2/22
    primary_branch_only: true
"
`;

exports[`projects > update ip allow primary only flag > test 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    primary_branch_only: false
"
`;

exports[`projects > update ip allow remove > test 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips: []
    primary_branch_only: false
"
`;

exports[`projects > update name > test 1`] = `
"id: test
name: test_project_new_name
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    primary_branch_only: false
"
`;
